--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/id_listitem"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:text="oid"
@@ -24,33 +24,48 @@
 
     <TextView
         android:id="@+id/trackingno_listitem"
-        android:layout_width="0dp"
-        app:layout_constraintHorizontal_weight="2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/id_listitem"
-        app:layout_constraintRight_toLeftOf="@id/status_listitem"
-        android:padding="5dp"
         android:layout_margin="10dp"
-        android:textAlignment="center"
+        android:padding="5dp"
         android:text="trackingno"
-        android:textStyle="bold"/>
+        android:textAlignment="center"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_weight="2"
+        app:layout_constraintLeft_toRightOf="@id/id_listitem"
+        app:layout_constraintRight_toLeftOf="@id/container_listitem"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/container_listitem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:padding="5dp"
+        android:text="container"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_weight="2"
+        app:layout_constraintLeft_toRightOf="@id/trackingno_listitem"
+        app:layout_constraintRight_toLeftOf="@id/status_listitem"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/status_listitem"
-        android:layout_width="0dp"
-        app:layout_constraintHorizontal_weight="2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/trackingno_listitem"
-        android:padding="5dp"
         android:layout_margin="10dp"
-        android:textAlignment="center"
+        android:padding="5dp"
         android:text="shipstatus"
-        android:textStyle="bold" />
+        android:textAlignment="center"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_weight="2"
+        app:layout_constraintLeft_toRightOf="@id/container_listitem"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
