--- a/app/src/main/res/layout/fragment4.xml
+++ b/app/src/main/res/layout/fragment4.xml
@@ -14,20 +14,22 @@
 
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
-        android:text="출고요청 스캔:"
+        android:text="해외송장스캔:"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_overseasBarcode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="100dp"
+    <EditText
+        android:id="@+id/tv_barcode"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
+        android:hint="해외송장번호"
+        android:inputType="number"
         android:text=""
         android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_search"
         app:layout_constraintStart_toEndOf="@+id/textView1"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,13 +47,13 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_main_list"
-        android:layout_width="409dp"
-        android:layout_height="417dp"
+        android:layout_width="0dp"
+        android:layout_height="450dp"
+        android:layout_marginTop="50dp"
         android:scrollbarFadeDuration="0"
         android:scrollbarSize="5dp"
         android:scrollbarThumbVertical="@android:color/darker_gray"
         android:scrollbars="vertical"
-        app:layout_constraintBottom_toTopOf="@id/btn_resetScan"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -62,10 +64,31 @@
         android:id="@+id/btn_resetScan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
+        android:layout_marginTop="50dp"
         android:text="초기화"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerview_main_list" />
+
+    <TextView
+        android:id="@+id/title_main_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="출고지시 목록"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerview_main_list"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.045"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btn_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="8dp"
+        android:text="찾기"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tv_barcode"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
