--- a/app/src/main/res/layout/fragment4.xml
+++ b/app/src/main/res/layout/fragment4.xml
@@ -29,6 +29,7 @@
         android:inputType="number"
         android:text=""
         android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/btn_search"
         app:layout_constraintStart_toEndOf="@+id/textView1"
         app:layout_constraintTop_toTopOf="parent" />
