--- a/app/src/main/res/layout/fragment3.xml
+++ b/app/src/main/res/layout/fragment3.xml
@@ -49,7 +49,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_main_list"
         android:layout_width="0dp"
-        android:layout_height="450dp"
+        android:layout_height="525dp"
         android:layout_marginTop="50dp"
         android:scrollbarFadeDuration="0"
         android:scrollbarSize="5dp"
@@ -64,7 +64,7 @@
         android:id="@+id/btn_resetScan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="10dp"
         android:text="초기화"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -72,10 +72,10 @@
         app:layout_constraintTop_toBottomOf="@+id/recyclerview_main_list" />
 
     <TextView
-        android:id="@+id/title_main_list"
+        android:id="@+id/title_main1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="입고대기 목록"
+        android:text="오늘 입고완료 목록"
         app:layout_constraintBottom_toTopOf="@+id/recyclerview_main_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.045"
